fixed search page error, added some additional students to html for testing

--- a/index.html
+++ b/index.html
@@ -555,6 +555,36 @@
                    <span class="date">Joined 05/14/13</span>
            </div>
         </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/89.jpg">
+                <h3>henri kruse 2</h3>
+                <span class="email">henri.kruse2@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 05/14/13</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/89.jpg">
+                <h3>henri kruse 3</h3>
+                <span class="email">henri3.kruse@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 05/14/13</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/89.jpg">
+                <h3>henri kruse 4</h3>
+                <span class="email">henri4.kruse@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 05/14/13</span>
+           </div>
+        </li>
       </ul>
       <!-- dynamically add pagination links here -->
 
